--- a/examples/security/keypair/keypair.json.tmpl
+++ b/examples/security/keypair/keypair.json.tmpl
@@ -1,5 +1,5 @@
 {
-  "apiVersion": "artifactory.jfrog.crossplane.io/v1alpha1",
+  "apiVersion": "security.artifactory.jfrog.crossplane.io/v1alpha1",
   "kind": "Keypair",
   "metadata": {
     "name": "my-crossplane-keypair",
